--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -5,6 +5,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba($color: #000000, $alpha: 0.5);
+  z-index: 1000;
   .head {
     display: flex;
     justify-content: flex-end;
