--- a/src/components/weather/Weather.module.scss
+++ b/src/components/weather/Weather.module.scss
@@ -4,7 +4,15 @@
   // background-color: #81a1db;
 
   .head {
-    background: url();
+    position: sticky;
+    top: 0;
+    // background: linear-gradient(
+    //   0deg,
+    //   rgba(255, 255, 255, 0) 0%,
+    //   rgba(129, 161, 219, 0.76) 15%,
+    //   rgba(129, 161, 219, 1) 30%
+    // );
+    z-index: 10;
   }
   .city {
     position: relative;
